--- a/public/404.html
+++ b/public/404.html
@@ -3,19 +3,21 @@
 
 <head>
   <meta charset="utf-8"> <meta name="description" content="Social Justice, Minus Dogma Course &#43; Community">
-<meta name="author" content="Sam Killermann">
+<meta name="author" content="SJMD">
  <link rel="icon" href="/images/favicon.png" type="image/png">
  
   <title>404 Page not found</title>
 
    
-    <link href="/css/nucleus.css?1560908863" rel="stylesheet">
+    <link href="/css/nucleus.css?1560971954" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7cbc8ab378.js"></script>
-    <link href="/css/hybrid.css?1560908863" rel="stylesheet">
-    <link href="/css/featherlight.min.css?1560908863" rel="stylesheet">
-    <link href="/css/perfect-scrollbar.min.css?1560908863" rel="stylesheet">
-    <link href="/css/theme.css?1560908863" rel="stylesheet">
-    <link href="/css/hugo-theme.css?1560908863" rel="stylesheet">
+    <link href="/css/hybrid.css?1560971954" rel="stylesheet">
+    <link href="/css/featherlight.min.css?1560971954" rel="stylesheet">
+    <link href="/css/perfect-scrollbar.min.css?1560971954" rel="stylesheet">
+    <link href="/css/theme.css?1560971954" rel="stylesheet">
+    <link href="/css/hugo-theme.css?1560971954" rel="stylesheet">
+    
+      <link href="/css/theme-red.css?1560971954" rel="stylesheet">
     
 <style type="text/css">
     :root #header + #content > #left > #rlblock_left {
